tests/switch_nonexhaustive_bool_bad.stderr
tests/switch_nonexhaustive_bool_bad.hop:3:2: error: HOP2061: missing cases in switch of type bool: false
