tests/switch_nonexhaustive_bool_bad.hop
// Verifies switch nonexhaustive bool is rejected.
fn f(b bool) i32 {
	switch b {
		case true { return 1 }
	}
	return 0
}
